--- a/styles/main.less
+++ b/styles/main.less
@@ -1,7 +1,11 @@
-@font-family: Menlo, Monaco, "Consolas", "Courier New", "Courier";
+@font-family:"Consolas", "Courier New", "Courier";
+@backgorund: rgb(38, 36, 41);
+@primary-color:@backgorund;
+@title-bar-color: rgb(1, 0, 1);
+@directory-color : #0d9c00;
 
 body {
-  background-color: #211E3A;
+  background-color: @backgorund;
 }
 
 .terminal-window {
@@ -29,39 +33,61 @@ body {
     left: 0;
   }
 
-  header {
-    background: #e0e8f0;
+  .title-bar {
+    background: @title-bar-color;
+    display: flex;
+    justify-content: flex-end;
     height: 30px;
     border-radius: 8px 8px 0 0;
-    padding-left: 10px;
+    padding-right: 10px;
 
     .button {
       width: 12px;
       height: 12px;
-      margin: 10px 4px 0 0;
+      margin: 10px 0 0 7px;
       display: inline-block;
       border-radius: 8px;
+      .mini-icon{
+        position: absolute;
+        width: 7px;
+        height: 2px;
+        margin-left:2.5px;
+        margin-top: 7.5px;
+        background-color: rgb(24, 24, 24);
+        border-radius: 1px;
+        z-index: 999;
+      }
+      .maxi-icon{
+        position: absolute;
+        width: 4px;
+        height: 4px;
+        margin-left: 2.3px;
+        margin-top: 2.3px;
+        border: 2px solid rgb(24, 24, 24);
+        border-radius: 1px;
+        z-index: 999;
+      }
     }
 
-    .button.green {
-      background: #3bb662;
+    .button.maxi,
+    .button.mini {
+      background:rgb(144, 144, 144);
       cursor: pointer;
     }
 
-    .button.yellow {
-      background: #e5c30f;
-      cursor: pointer;
-    }
-
-    .button.red {
+    .button.close {
       background: #e75448;
     }
+    
   }
+
+
 
   #terminal {
     color: white;
     font-family: @font-family;
     font-size: 11pt;
+    border-radius: 0 0 8px 8px;
     background: #30353a;
     padding: 10px;
     box-sizing: border-box;
@@ -108,16 +134,16 @@ body {
     color: lightblue;
   }
 
-  .gray {
-    color: gray;
+  .gray{
+    color: rgb(144, 144, 144);
   }
 
   .dir {
-    color: #88DEF2;
+    color: @directory-color;
   }
 
   .green {
-    color: green;
+    color: @directory-color;
   }
 }
 
@@ -130,7 +156,7 @@ body {
 
 .footer {
   position: absolute;
-  bottom: 40px;
+  bottom: 30px;
   left: 0;
   right: 0;
   text-align: center;
@@ -156,6 +182,6 @@ body {
   }
 
   .footer {
-    bottom: 20px;
+    bottom: 10px;
   }
 }
