--- a/styles/main.less
+++ b/styles/main.less
@@ -1,6 +1,6 @@
-@font-family:"Consolas", "Courier New", "Courier";
+@font-family: "Consolas", "Courier New", "Courier";
 @backgorund: rgb(38, 36, 41);
-@primary-color:@backgorund;
+@primary-color: @backgorund;
 @title-bar-color: rgb(1, 0, 1);
 @directory-color : #0d9c00;
 
@@ -16,7 +16,7 @@ body {
   margin: auto;
   position: relative;
   display: block;
-  top: 25vh;
+  top: 15vh;
   transition: all 0.5s ease;
   z-index: 999;
 
@@ -25,7 +25,7 @@ body {
     top: calc(100vh - 38px);
     width: 250px;
   }
-  
+
   &.fullscreen {
     width: 100%;
     height: 100%;
@@ -47,6 +47,7 @@ body {
       margin: 10px 0 0 7px;
       display: inline-block;
       border-radius: 8px;
+
       .mini-icon{
         position: absolute;
         width: 7px;
@@ -57,7 +58,8 @@ body {
         border-radius: 1px;
         z-index: 999;
       }
-      .maxi-icon{
+
+      .maxi-icon {
         position: absolute;
         width: 4px;
         height: 4px;
@@ -67,21 +69,50 @@ body {
         border-radius: 1px;
         z-index: 999;
       }
+      
+      .close-icon {
+        position: relative;
+        margin-left: 1.5px;
+        margin-top: 1.5px;
+        height: 9px;
+        width: 9px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+      }
+      
+      .close-icon::before,
+      .close-icon::after {
+        position: absolute;
+        content: '';
+        width: 100%;
+        height: 2px;
+        border-radius: 1px;
+        background-color: rgb(24, 24, 24);
+      }
+
+      .close-icon::before {
+        transform: rotate(45deg);
+      }
+
+      .close-icon::after {
+        transform: rotate(-45deg);
+      }
     }
 
     .button.maxi,
-    .button.mini {
-      background:rgb(144, 144, 144);
+    .button.mini,
+    .button.close {
+      background: rgb(144, 144, 144);
       cursor: pointer;
     }
 
-    .button.close {
-      background: #e75448;
-    }
-    
   }
 
-
+  p {
+    margin: 0px;
+    padding: 0px;
+  }
 
   #terminal {
     color: white;
@@ -96,7 +127,7 @@ body {
     top: 30px;
     bottom: 0;
     overflow: auto;
-    
+
     span.input:focus-visible {
       outline: none;
     }
@@ -117,9 +148,9 @@ body {
   }
 
   .input {
-    outline-color:  #30353a;
-    border:         none;
-    display:        inline-block;
+    outline-color: #30353a;
+    border: none;
+    display: inline-block;
   }
 
   .root {
@@ -134,7 +165,7 @@ body {
     color: lightblue;
   }
 
-  .gray{
+  .gray {
     color: rgb(144, 144, 144);
   }
 
@@ -149,14 +180,13 @@ body {
 
 .command_input {
   border: none;
-  // background: #30353a;
   background: #000634;
   color: white;
 }
 
 .footer {
   position: absolute;
-  bottom: 30px;
+  bottom: 20px;
   left: 0;
   right: 0;
   text-align: center;
@@ -174,7 +204,7 @@ body {
   display: none;
 }
 
-@media only screen and (max-width: 650px){
+@media only screen and (max-width: 650px) {
   .terminal-window {
     width: 95%;
     height: 60vh;
@@ -182,6 +212,6 @@ body {
   }
 
   .footer {
-    bottom: 10px;
+    bottom: 0px;
   }
 }
