--- a/styles/main.less
+++ b/styles/main.less
@@ -1,11 +1,10 @@
 @font-family: "Consolas", "Courier New", "Courier";
-@backgorund: rgb(38, 36, 41);
-@primary-color: @backgorund;
+@bg-color: rgb(38, 36, 41);
 @title-bar-color: rgb(1, 0, 1);
 @directory-color : #0d9c00;
 
 body {
-  background-color: @backgorund;
+  background-color: @bg-color;
 }
 
 .terminal-window {
